syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.protobuf";

service UserService{
  rpc CreateUser(RequestCreateUser) returns (UserData);
  rpc GetUsers(RequestGetUsers) returns (ResponseGetUsers);
}

message UserData {
  int64 id = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  string password = 6;
  string phoneNumber = 7;
}

message RequestCreateUser {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  string phoneNumber = 6;
}

message RequestGetUsers
{
  optional string username = 1;
  optional int64 userid = 2;
}

message ResponseGetUsers{
  repeated UserData userData = 1;
}